2025-12-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Refactor.  Move page offset access from language
	parser logic into "engine" logic.

	* src/roff/troff/div.h: Drop unnecessary declaration of
	`page_offset()` returning `void`.  This concealed a latent
	symbol visibility problem.
	(class top_level_diversion): Declare new member function
	`get_previous_page_offset()`, giving it a simple inline
	definition akin to the existing `get_page_offset()`.
	* src/roff/troff/div.cpp (page_offset): Make request handler
	use accessor member functions instead of retrieving the
	diversion's properties directly.

2025-12-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Refactor.  Move page offset updates from language
	parser logic into "engine" logic.

	* src/roff/troff/div.h (class top_level_diversion): Declare new
	member function `set_page_offset()`.
	(top_level_diversion::set_page_offset): Define it, and make it
	responsible for updating both `page_offset` and
	`prev_page_offset` private member variables.
	* src/roff/troff/div.cpp (page_offset): Make request handler
	call this new mutator member function instead of manipulating
	the diversion's properties directly.

2025-12-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	[grohtml,grotty]: Fix Savannah #67843.

	* tmac/html-end.tmac:
	* tmac/tty.tmac: Set the page offset to zero _twice_, to better
	simulate AT&T nroff behavior.  (Do it for the "html" device too;
	it better resembles an nroff-mode device than a troff-mode one.)

2025-12-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Regression-test Savannah #67843.

	* src/roff/groff/tests/po-request-works: New file.
	* src/roff/groff/groff.am (groff_TESTS): Run test.

2025-12-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Refactor.  Split `TOKEN_HORIZONTAL_MOTION` token type
	into two, leaving the existing one for `\0`, `\^`, and `\|`
	escape sequences, and creating a new